<resources>
    <string name="app_name">Ne Ararsan Var</string>
    <string name="ADMOB_BANNER_UNIT_ID">ca-app-pub-3066798903065241~5157850960</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">tThViNZhx716xBdF34wRiyZQ2GD6QFktu7F6elx2</string>
    <string name="back4app_client_key">Fyhrbi9KnsVyprwoL8S2FODlEWlwRqBeCJRTcvP4</string>
    <string name="facebook_app_id">490596851915831</string>
    <string name="fb_login_protocol_scheme">fb490596851915831</string>
    <string name="progress_dialog_loading">Lütfen bekleyin…</string>
    <string name="gallery_chooser_title">Resim seç</string>
    <string name="alert_ok_button">Tamam</string>
    <string name="alert_cancel_button">İptal</string>
    <string name="not_available_text_placeholder">N/A</string>
    <string name="filter_condition_new">En Yeni</string>
    <string name="filter_condition_used">En Eski</string>
    <string name="geocoder_not_present_error">Geocoder not present!</string>
    <string name="get_location_failure">Konumunuz alınamadı. \N Ayarlar\'a gidin ve Konum Hizmetinin etkinleştirildiğinden emin olun!</string>
    <string name="take_video_title">Video Çek</string>
    <string name="take_picture_title">Resim Çek</string>
    <string name="select_image_chooser_title">Resim Seç</string>
    <string name="select_video_chooser_title">Video Seç</string>
    <string name="no_available_camera_error">Kameraya erişilemiyor.</string>
    <string name="failed_to_retrieve_photo_error">Fotoğraf alınamadı.</string>
    <string name="select_image_source_alert_title">Kaynak seç</string>
    <string name="pick_image_from_gallery_title">Galeriden seç</string>
    <string name="image_preview_screen_title">ZOOM YAP | Dokun ve Kapat</string>
    <string name="username_formatted">\@%s</string>
    <string name="select_option_title">Seçenek seç</string>
    <string name="watch_video_screen_title">Video izle</string>
    <string name="map_description">Haritayı hareket ettirebilir ve bir Konum seçmelisiniz veya bu Harita ekranını kapatmalısınız</string>
    <string name="move_and_zoom_to_set_location">Konumunu seçmek için haritayı oynat</string>
    <string name="wizard_page1">KOLAYCA ÜRÜNÜ PAYLAŞ\n\nÜrününü kolayca yükle ve hızlıca sat,kirala veya takas et.</string>
    <string name="wizard_page2">ÜRÜNLERİ KATEGORİLENDİR\n\nHer kategorideki ürünü arayabilir ve paylaşabilirsin.</string>
    <string name="wizard_page3">DİĞER KULLANICILARLA SOHBET ET\n\nGelişmiş sohbet modülü sayesinde diğer kullanıcılar ile sohbet edebilirsiniz.</string>
    <string name="wizard_title_activity_image_preview">Resim Önizle</string>
    <string name="wizard_terms_alert_title">Hizmet Şartlarımızı kabul ediyor musunuz?</string>
    <string name="wizard_terms_alert_accept">Evet</string>
    <string name="wizard_terms_alert_read">Hizmet şartlarını oku</string>
    <string name="wizard_terms_title">Kayıt olabilmek için hizmet şartlarını kabul etmelisiniz</string>
    <string name="wizard_signup_button">E-mail ile kayıt ol ve ya giriş yap</string>
    <string name="terms_of_use_title">Kullanım Şartları</string>
    <string name="sign_up_username_hint">Kullanıcı adı seç</string>
    <string name="sign_up_password_hint">Şifre seç</string>
    <string name="sign_up_email_hint">E-mail adresinizi yazınız</string>
    <string name="sign_up_fullname_hint">Ad ve Soyadınızı yazınız</string>
    <string name="sign_up_agree_terms">Kullanım Şartlarını kabul ediyorum</string>
    <string name="sign_up_button">Kayıt Ol</string>
    <string name="sign_up_validation_error">Kayıt olmak için tüm alanları doldurunuz</string>
    <string name="sign_up_terms_warning">Kayıt olabilmek için hizmet şartlarını kabul etmelisiniz.</string>
    <string name="login_username_hint">Kullanıcı adı</string>
    <string name="login_password_hint">Şifre</string>
    <string name="login_button">Giriş Yap</string>
    <string name="login_sign_up_button">E-mail ile Kayıt Ol</string>
    <string name="login_forgot_password">Şifreni mi Unuttun?</string>
    <string name="login_forgot_password_alert">Kayıt olduğunuz e-mail adresini giriniz</string>
    <string name="login_forgot_password_success">Şifreni sıfırlamak için bir e-mail gönderdik</string>
    <string name="home_tab_browse">Ana Sayfa</string>
    <string name="home_tab_likes">Bildirimler</string>
    <string name="home_tab_activity">Keşfet</string>
    <string name="home_tab_account">Profil</string>
    <string name="options_dots">•••</string>
    <string name="browse_search_warning">Birşeyler yazmalısın!</string>
    <string name="browse_chat_error">Sohbeti görebilmek için giriş yapmalısın. Giriş yapmak ister misin? </string>
    <string name="browse_search_hint">Ne istersen ara…</string>
    <string name="my_likes_screen_title">Keşfet</string>
    <string name="my_likes_empty_screen_description">Favorileriniz burada gösterilecek.</string>
    <string name="activity_remove_success">Kaldırıldı!</string>
    <string name="activity_screen_title">Bildirimler</string>
    <string name="activity_delete_description">Silmek için basılı tut</string>
    <string name="account_logout_warning_title">Çıkmak istediğine emin misin?</string>
    <string name="account_logout_loading">Çıkış yapılıyor…</string>
    <string name="account_verified">Evet</string>
    <string name="account_not_verified">Hayır</string>
    <string name="account_screen_title">Hesabım</string>
    <string name="account_joined_title">Katıldı:</string>
    <string name="account_verified_title">Onaylı Profil:</string>
    <string name="account_edit_profile_button">Profil Düzenle</string>
    <string name="account_feedbacks_button">Geri Bildirimler</string>
    <string name="account_logout_button">Çıkış</string>
    <string name="account_my_ads_section_title">İlanlarım</string>
    <string name="sell_edit_editing_title">Ürün Düzenle</string>
    <string name="sell_edit_selling_title">Ürün Sat</string>
    <string name="sell_edit_video_error">Video Oynatılamıyor</string>
    <string name="sell_edit_video_too_long_error">Videonuz %s saniyeden daha fazla. Lütfen daha kısa bir video seçiniz</string>
    <string name="sell_edit_default_condition">@string/filter_condition_new</string>
    <string name="sell_edit_input_validation_error">Tüm detayları eklediğinizden emin olun</string>
    <string name="sell_edit_delete_alert_title">Bu ürünü silmek istediğinizden emin misiniz?</string>
    <string name="sell_edit_delete_ok">Ürün Sil</string>
    <string name="sell_edit_submit_success">Ürünün başarıyla yayınlandı!</string>
    <string name="sell_edit_get_location_failure">Konumunuz alınamadı. Ayarlar\'a gidin ve Konum Hizmetinin etkinleştirildiğinden emin olun, aksi takdirde Ürününüz yayınlanamayacaktır.</string>
    <string name="sell_edit_picture_failure">Fotoğraf yüklenirken hata oluştu</string>
    <string name="sell_edit_location_failure">Lokasyon yüklenemedi!</string>
    <string name="sell_edit_item_delete_success">Ürününüz silindi!</string>
    <string name="sell_edit_subcategory_edit">Alt Kategori</string>
    <string name="sell_edit_add_images_title">Resim ekle</string>
    <string name="sell_edit_image_text_placeholder">+\nRESİM</string>
    <string name="sell_edit_add_video_title">Video ekle</string>
    <string name="sell_edit_video_text_placeholder">+\nVIDEO</string>
    <string name="sell_edit_details_title">Detaylar</string>
    <string name="sell_edit_category_title">Kategori</string>
    <string name="sell_edit_title">Başlık</string>
    <string name="sell_edit_title_hint">Satış Başlığı </string>
    <string name="sell_edit_price_title">Fiyat</string>
    <string name="sell_edit_price_hint">Ürünün için fiyat belirle</string>
    <string name="sell_edit_condition_title">Durumu</string>
    <string name="sell_edit_location_title">Lokasyon</string>
    <string name="sell_edit_choose_location_placeholder">Lokasyon Seç (opsiyonel)*</string>
    <string name="sell_edit_location_description">*Bir konum seçmezseniz, mevcut konumunuz varsayılan olarak ayarlanacaktır</string>
    <string name="sell_edit_description_title">Açıklama</string>
    <string name="sell_edit_description_hint">Ürününüz hakkında açıklama yazınız</string>
    <string name="sell_edit_delete_button">Sil</string>
    <string name="categories_screen_title">Kategori Seç</string>
    <string name="city_screen_title">Şehir Seç</string>
    <string name="type_screen_title">Tür Seç</string>
    <string name="categories_item_text_placeholder">Yükleniyor…</string>
    <string name="categories_sort_by_recent_title">Son</string>
    <string name="categories_sort_by_lowest_price_title">Düşük Fiyat</string>
    <string name="categories_sort_by_highest_price_title">Yüksek Fiyat</string>
    <string name="categories_sort_by_most_liked_title">En Popüler</string>
    <string name="categories_report_type_ad">Ürün</string>
    <string name="categories_report_type_user">Kullanıcı</string>
    <string name="categories_all_title">Hepsi</string>
    <string name="categories_done_error">Kategori Seç</string>
    <string name="city_done_error">Şehir Seç</string>
    <string name="type_all">Hepsi</string>
    <string name="type_sell">Sat</string>
    <string name="type_rent">Kirala</string>
    <string name="type_exchange">Takas</string>
    <string name="type_gift">Hediye</string>
    <string name="cities_all_title">Hepsi</string>
    <string name="subcategories_selection_empty">Alt Kategori Seç</string>
    <string name="subcategories_select_title">Seçilen Alt Kategori</string>
    <string name="subcategories_empty_for_current_category">Alt Kategori bulunamadı.</string>
    <string name="ads_list_search_empty">Hiç ürün bulunamadı. Başka bir arama yapın.</string>
    <string name="ads_list_filter_location_loading">yükleniyor…</string>
    <string name="ads_list_sort_by_title">SIRALA</string>
    <string name="ads_list_default_sort_by">@string/categories_sort_by_recent_title</string>
    <string name="ads_list_category_filter_title">KATEGORİ</string>
    <string name="ads_list_search_validation_error">Birşeyler yazmalısın!</string>
    <string name="ads_list_distance_formatted">%s ŞURDAN</string>
    <string name="ad_details_screen_title">Detayları Ekle</string>
    <string name="ad_details_video_watch_button">Video: İzle</string>
    <string name="ad_details_video_not_available">Video: N/A</string>
    <string name="ad_details_options_alert_title">Seçeneğini Seç</string>
    <string name="ad_details_report_ad_option">Ürünü raporla</string>
    <string name="ad_details_share_option">Paylaş</string>
    <string name="ad_details_share_chooser_title">Paylaşılıyor…</string>
    <string name="ad_details_share_description">Bunu bir bakmalısın: \'%s\' on #neararsanvar</string>
    <string name="ad_details_user_block_message">Üzgünüz, @%s seni bloke etti. Bu kullanıcıya artık mesaj gönderemezsin.</string>
    <string name="ad_details_chat_error">Sohbeti görebilmek için giriş yapmalısın. Giriş yapmak ister misin?</string>
    <string name="ad_details_user_liked_your_ad">\@%s Ürününüzü beğendi: %s</string>
    <string name="comments_screen_title">Yorumlar</string>
    <string name="comments_text_placeholder">yükleniyor…</string>
    <string name="comments_send_button">Gönder</string>
    <string name="comments_input_hint">buraya yazınız…</string>
    <string name="edit_profile_screen_title">Profil Düzenle</string>
    <string name="edit_profile_change_photo_button">Profil Resmini Değiştir</string>
    <string name="edit_profile_username_title">Kullanıcı Adı</string>
    <string name="edit_profile_full_name_title">Tam Adınız</string>
    <string name="edit_profile_email_title">email</string>
    <string name="edit_profile_email_hint">ex: example@email.com</string>
    <string name="edit_profile_about_me_title">Hakkımda</string>
    <string name="edit_profile_reset_password_title">ŞİFRE SIFIRLA</string>
</resources>