<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:id="@+id/aep_top_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:text="@string/edit_profile_screen_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/aep_back_iv"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_id" />

        <TextView
            android:id="@+id/aep_save_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:textSize="16dp"
            android:text="Bitti"
            android:tint="@color/black" />
    </RelativeLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blackTextColor" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:paddingTop="14dp"
        android:paddingBottom="24dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/aep_avatar_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/neararsanvar" />

                <TextView
                    android:id="@+id/aep_change_avatar_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/edit_profile_change_photo_button"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_square_gray"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_profile_username_title"
                    android:textColor="@color/grayTextColor"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/aep_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:textColor="@color/blackTextColor"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"
                    tools:text="J Smith" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_square_gray"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_profile_full_name_title"
                    android:textColor="@color/grayTextColor"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/aep_fullname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:textColor="@color/blackTextColor"
                    android:textColorHint="@color/grayTextColor"
                    android:textSize="15sp"
                    tools:text="J Smith" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_square_gray"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_profile_email_title"
                    android:textColor="@color/grayTextColor"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/aep_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:hint="@string/edit_profile_email_hint"
                    android:singleLine="true"
                    android:textColor="@color/blackTextColor"
                    android:textColorHint="@color/grayTextColor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_square_gray"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_profile_about_me_title"
                    android:textColor="@color/grayTextColor"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/aep_about_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:gravity="start|top"
                    android:lines="4"
                    android:maxLines="4"
                    android:textColor="@color/blackTextColor"
                    android:textColorHint="@color/gray"
                    android:textSize="15sp"
                    tools:text="J Smith" />
            </LinearLayout>


            <TextView
                android:id="@+id/aep_reset_password_tv"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:background="@color/gray"
                android:text="@string/edit_profile_reset_password_title"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/aep_terms_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkGrayTextColor"
                android:gravity="center"
                android:drawablePadding="16dp"
                android:padding="10dp"
                android:text = "ŞARTLARI VE KOŞULLARI OKU"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
